# farr

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
examples/binary_search/: sol01.farr
examples/bubble_sort/: sol01.farr
examples/calculator/: sol01.farr
examples/echo/: sol01.farr
examples/fizzbuzz/: sol01.farr
examples/linear_search/: sol01.farr  sol02.farr
examples/rock_paper_scissors/: sol01.farr
examples/selection_sort/: sol01.farr
farr/: __init__.py  __main__.py  constants.py  exceptions.py  helpers.py
farr/interpreter/: __init__.py  base.py  objects.py
farr/lexer/: __init__.py  base.py
farr/parser/: __init__.py  base.py  nodes.py
libs/: datetime.farr  fs.farr  functools.farr  os.farr
libs/algorithms/: funda.farr  searching.farr  sorting.farr
libs/database/kime/: funda.farr
libs/datetime/: funda.farr
libs/logging/: funda.farr
libs/math/: funda.farr  random.farr
libs/platform/: funda.farr
tests/: conftest.py  test_helpers.py  test_interpreter.py  test_lexer.py  test_parser.py
